--- a/Testing/VME/CMakeLists.txt
+++ b/Testing/VME/CMakeLists.txt
@@ -168,6 +168,9 @@ ADD_TEST(mafPolylineGraphBranchTest ${EXECUTABLE_OUTPUT_PATH}/mafPolylineGraphBr
 ADD_EXECUTABLE(mafVMEVolumeLargeTest  mafVMEVolumeLargeTest.h mafVMEVolumeLargeTest.cpp)
 ADD_TEST(mafVMEVolumeLargeTest ${EXECUTABLE_OUTPUT_PATH}/mafVMEVolumeLargeTest)
 
+ADD_EXECUTABLE(medDataPipeCustomSegmentationVolumeTest  medDataPipeCustomSegmentationVolumeTest.h medDataPipeCustomSegmentationVolumeTest.cpp)
+ADD_TEST(medDataPipeCustomSegmentationVolumeTest ${EXECUTABLE_OUTPUT_PATH}/medDataPipeCustomSegmentationVolumeTest)
+
 #to be checked
 #ADD_EXECUTABLE(medPipeVolumeVRTest medPipeVolumeVRTest.h medPipeVolumeVRTest.cpp)
 #ADD_TEST(medPipeVolumeVRTest  ${EXECUTABLE_OUTPUT_PATH}/medPipeVolumeVRTest)
