Added OpSegmentation and OpExtractGeometry from lhpBuilder

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -74,6 +74,12 @@ SET(PROJECT_SRCS
   medOpScaleDataset.h
 
   medOpCreateWrappedMeter.cpp
+  medOpSegmentation.cpp
+  medOpSegmentation.h
+  medOpExtractGeometry.cpp
+  medOpExtractGeometry.h
+  
+  medOpCreateWrappedMeter.cpp
   medOpCreateWrappedMeter.h
   
   medOpComputeWrapping.h
