Test class for vtkMEDPolyDataDeformation_M1::CSkeletonVertex.

--- a/vtkMED/Testing/CMakeLists.txt
+++ b/vtkMED/Testing/CMakeLists.txt
@@ -157,6 +157,9 @@ ADD_TEST(PPolynomialTest ${EXECUTABLE_OUTPUT_PATH}/PPolynomialTest)
 ADD_EXECUTABLE(CSkeletonEdgeM1Test CSkeletonEdgeM1Test.h CSkeletonEdgeM1Test.cpp)
 ADD_TEST(CSkeletonEdgeM1Test ${EXECUTABLE_OUTPUT_PATH}/CSkeletonEdgeM1Test)
 
+ADD_EXECUTABLE(CSkeletonVertexM1Test CSkeletonVertexM1Test.h CSkeletonVertexM1Test.cpp)
+ADD_TEST(CSkeletonVertexM1Test ${EXECUTABLE_OUTPUT_PATH}/CSkeletonVertexM1Test)
+
 # wxWidgets specific classes
 #IF (MAF_USE_WX)
 #ENDIF (MAF_USE_WX)
