added missing file to medDLL project

--- a/medDLL/CMakeLists.txt
+++ b/medDLL/CMakeLists.txt
@@ -266,6 +266,8 @@ SET(INTERACTION_SRCS
   ../Interaction/medGizmoCrossTranslateAxis.h
   ../Interaction/medGizmoCrossTranslatePlane.cpp
   ../Interaction/medGizmoCrossTranslatePlane.h
+  ../Interaction/medInteractorPicker.cpp
+  ../Interaction/medInteractorPicker.h
 )
 ###############################################
 #OPERATIONS
