added offis possible folder

--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -13,3 +13,5 @@ INCLUDE_DIRECTORIES(${MED_INCLUDE_DIRS})
 LINK_DIRECTORIES(${MED_LIBRARY_DIRS})
 
 LINK_LIBRARIES(medCommon medOperations medViews medVME vtkMED)
+
+SET (Offis_POSSIBLE_ROOT_PATHS @MedFL_BINARY_DIR@/Offis/Build @MedFL_SOURCE_DIR@/Offis/Sources)
