--- a/qa/mafPath.py.conf
+++ b/qa/mafPath.py.conf
@@ -3,9 +3,9 @@ import os
 #cmake autofilled paths
 
 #mafSourcesDir represents the base dir for all the projects, each project needs to be located in a directory
-mafSourcesDir = os.path.join("@MAF_SOURCE_DIR@","src")
+mafSourcesDir = os.path.join("@MAF_SOURCE_DIR@")
 #mafTestDir represents the base directory for all the tests, each test project needs to be located in a directory
-mafTestsDir = os.path.join("@MAF_SOURCE_DIR@","test")
+mafTestsDir = os.path.join("@MAF_SOURCE_DIR@","Testing")
 #mafBinaryDir represents the directory in which find all the binaries
 mafBinaryDir = os.path.join("@MAF_BINARY_DIR@")
 #mafQADir represents the directory of the qa inside the build directory
