--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@
 # Program:   MULTIMOD APPLICATION FRAMEWORK (MAF)
 # Module:    $RCSfile: CMakeLists.txt,v $
 # Language:  CMake 2.0
-# Date:      $Date: 2011-07-28 07:50:37 $
-# Version:   $Revision: 1.44.2.11 $
+# Date:      $Date: 2011-09-28 09:28:59 $
+# Version:   $Revision: 1.44.2.12 $
 #
 # Description:
 # CMake Project file for the MAF.
@@ -237,16 +237,44 @@ ENDIF(WIN32)
   #### Include directory for binary distribution of MAF
   SET(MAF_INSTALL_INCLUDE_DIRS ${MAF_BINARY_DIR}/Include)
   FILE(MAKE_DIRECTORY ${MAF_INSTALL_INCLUDE_DIRS})
-  FILE(GLOB files_to_remove "${MAF_INSTALL_INCLUDE_DIRS}/*.*")
-  FOREACH(f ${files_to_remove})
-    FILE(REMOVE "${f}")
-  ENDFOREACH(f ${files_to_remove})
+	
+	#NO MEDICAL REBUILD
+	#searching python executable
+	FIND_PROGRAM(PYTHON_EXECUTABLE
+        NAMES python python3.2 python3.1 python3.0 python2.7 python2.6 python2.5 
+				python2.4 python2.3 python2.2 python2.1 python2.0 python1.6 python1.5
+		PATHS
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\3.2\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\3.1\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\3.0\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.7\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.6\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.5\\InstallPath]
+				[HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.4\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.3\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.2\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.1\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\2.0\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\1.6\\InstallPath]
+        [HKEY_LOCAL_MACHINE\\SOFTWARE\\Python\\PythonCore\\1.5\\InstallPath]
+        )
   
+	#NO MEDICAL REBUILD
+	#if Python executable is not present i use the old system and i delete all the source headers
+	#in this case there is no improvement to the old system 
+	IF (NOT PYTHON_EXECUTABLE)
+		FILE(GLOB files_to_remove "${MAF_INSTALL_INCLUDE_DIRS}/*.*")
+		FOREACH(f ${files_to_remove})
+			FILE(REMOVE "${f}")
+		ENDFOREACH(f ${files_to_remove})
+  ENDIF(NOT PYTHON_EXECUTABLE)
+	
+		  
   FOREACH(dirs ${INCLUDE_DIRS})
     FILE(GLOB include_file_list "${dirs}/*.h")
     FILE(GLOB template_file_list "${dirs}/*.txx")
     FILE(GLOB icons_file_list "${dirs}/*.xpm")
-    
+		
     FOREACH(file ${include_file_list})
       FILE(RELATIVE_PATH file_name "${dirs}" "${file}")
     	CONFIGURE_FILE("${file}" "${MAF_INSTALL_INCLUDE_DIRS}/${file_name}")
@@ -262,6 +290,17 @@ ENDIF(WIN32)
     	CONFIGURE_FILE("${icons_file}" "${MAF_INSTALL_INCLUDE_DIRS}/${icons_file_name}")
     ENDFOREACH(icons_file ${icons_file_list})
   ENDFOREACH(dirs ${MAF_INCLUDE_DIRS})
+  
+	#NO MEDICAL REBUILD
+	#if Python executable is present i delete only removed header with python script
+	IF(PYTHON_EXECUTABLE)
+		EXEC_PROGRAM("${PYTHON_EXECUTABLE}"
+			ARGS "${MAF_SOURCE_DIR}/RemoveDeletedH.py ${MAF_INSTALL_INCLUDE_DIRS} ${INCLUDE_DIRS} "
+			OUTPUT_VARIABLE py_output
+		)
+		message("${py_output}")
+	ENDIF(PYTHON_EXECUTABLE)
+
   
   CONFIGURE_FILE(
   ${MAF_SOURCE_DIR}/MAFUse.cmake.in
