--- a/qa/doc_output/MAF2DoxyfileWithTests.in
+++ b/qa/doc_output/MAF2DoxyfileWithTests.in
@@ -606,7 +606,7 @@ INPUT                  = . \
 # into libc) for the transcoding. See http://www.gnu.org/software/libiconv for 
 # the list of possible encodings.
 
-INPUT_ENCODING         = UTF-8
+INPUT_ENCODING         = iso-8859-1
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
