added a new output folder to save src files

--- a/qa/mafPath.py.conf
+++ b/qa/mafPath.py.conf
@@ -16,3 +16,5 @@ mafDocOutput = os.path.join(mafQADir,"doc_output","DocOutput","xml")
 mafDocWithTestsOutput = os.path.join(mafQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
 mafPythonDocOutput = os.path.join("@MAF_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
+#mafSourceTemp represents the files .cxx .txx .cpp of only MAF framework without any libraries
+mafSourceTemp = os.path.join("@MAF_BINARY_DIR@","qa","doc_output","TmpSrc")
