--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -8,7 +8,7 @@ IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
 #ENDIF (MED_USE_BTK)
 ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
 
-INCLUDE_DIRECTORIES(${MED_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES("@MED_INSTALL_INCLUDE_DIRS@" "@MED_SOURCE_DIR@/VME")
 
 LINK_DIRECTORIES(${MED_LIBRARY_DIRS})
 
