renamed mafVTKInterpolator in mafDataPipeInterpolatorVTK

--- a/VME/DataPipes/CMakeLists.txt
+++ b/VME/DataPipes/CMakeLists.txt
@@ -10,8 +10,8 @@ SET(PROJECT_SRCS
   mafDataPipeCustom.h
   mafDataPipeCustomProber.cpp
   mafDataPipeCustomProber.h
-  mafVTKInterpolator.cpp
-  mafVTKInterpolator.h
+  mafDataPipeInterpolatorVTK.cpp
+  mafDataPipeInterpolatorVTK.h
   vtkMAFDataPipe.cpp
   vtkMAFDataPipe.h
 )
