added  coping files in tmp dir

--- a/qa/CMakeLists.txt
+++ b/qa/CMakeLists.txt
@@ -41,5 +41,41 @@ macro(configure_files srcDir destDir)
 endmacro(configure_files)
 
 get_filename_component(CUR_ABSOLUTE_DIR ${CMAKE_CURRENT_LIST_FILE} PATH)
+
+SET(SRC_TMP_DIR ${CMAKE_BINARY_DIR}/qa/doc_output/TmpSrc)
+FILE(MAKE_DIRECTORY ${SRC_TMP_DIR})
+
+SET(SRC_DIRS  "${MAF_BINARY_DIR}" "${MAF_SOURCE_DIR}/Base" "${MAF_BINARY_DIR}/Interaction" "${MAF_SOURCE_DIR}/Interaction" "${MAF_SOURCE_DIR}/Interaction/Drivers" 
+              "${MAF_SOURCE_DIR}/Core" "${MAF_SOURCE_DIR}/Gui" "${MAF_SOURCE_DIR}/IO" "${MAF_SOURCE_DIR}/Operations" "${MAF_SOURCE_DIR}/VME" 
+              "${MAF_SOURCE_DIR}/VME/DataPipes" "${MAF_SOURCE_DIR}/vtkMAF" "${MAF_BINARY_DIR}/vtkMAF" "${MAF_SOURCE_DIR}/GPUAPI" 
+              "${MAF_SOURCE_DIR}/GPUAPI/GLEW" "${MAF_SOURCE_DIR}/GPUAPI/FBO")
+              
+FILE(GLOB files_to_remove "${SRC_TMP_DIR}/*.*")
+
+FOREACH(f ${files_to_remove})
+  FILE(REMOVE "${f}")
+ENDFOREACH(f ${files_to_remove})
+
+FOREACH(dirs ${SRC_DIRS})
+  FILE(GLOB source1_file_list "${dirs}/*.cpp")
+  FILE(GLOB template_file_list "${dirs}/*.txx")
+  FILE(GLOB source2_file_list "${dirs}/*.cxx")
+  
+  FOREACH(source1_file ${source1_file_list})
+    FILE(RELATIVE_PATH source1_file_name "${dirs}" "${source1_file}")
+    CONFIGURE_FILE("${source1_file}" "${CMAKE_BINARY_DIR}/qa/doc_output/TmpSrc/${source1_file_name}")
+  ENDFOREACH(source1_file ${source1_file_list})
+  
+  FOREACH(template_file ${template_file_list})
+    FILE(RELATIVE_PATH template_file_name "${dirs}" "${template_file}")
+    CONFIGURE_FILE("${template_file}" "${CMAKE_BINARY_DIR}/qa/doc_output/TmpSrc/${template_file_name}")
+  ENDFOREACH(template_file ${template_file_list})
+  
+  FOREACH(source2_file ${source2_file_list})
+    FILE(RELATIVE_PATH source2_file_name "${dirs}" "${source2_file}")
+    CONFIGURE_FILE("${source2_file}" "${CMAKE_BINARY_DIR}/qa/doc_output/TmpSrc/${source2_file_name}")
+  ENDFOREACH(source2_file ${source2_file_list})
+ENDFOREACH(dirs ${SRC_DIRS})
+
 configure_files("${CUR_ABSOLUTE_DIR}" "${MAF_BINARY_DIR}/qa")
 add_subdirectory(doc_output)
