added new doc output path for vtkMAF rules

--- a/qa/mafPath.py.conf
+++ b/qa/mafPath.py.conf
@@ -12,6 +12,8 @@ mafBinaryDir = os.path.join("@MAF_BINARY_DIR@")
 mafQADir = os.path.join(mafBinaryDir,"qa")
 #represents the output directory of the doxygen of the C++ source files without tests, in xml
 mafDocOutput = os.path.join(mafQADir,"doc_output","DocOutput","xml")
+#represents the output directory of the doxygen of the C++ source files without tests, in xml
+vtkMafDocOutput = os.path.join(mafQADir,"doc_output","DocOutputvtkMAF","xml")
 #represents the output directory of the doxygen of the C++ source files wit tests, in xml
 mafDocWithTestsOutput = os.path.join(mafQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
