--- a/qa/Rules/CommentsRulesFilePattern.ini
+++ b/qa/Rules/CommentsRulesFilePattern.ini
@@ -1,3 +1,3 @@
 parameter=".*\.(cpp|txx|cxx)$"
-sourceDir=mafPath.mafSourceTemp
+sourceDir=mafPath.mafSourcesDir
 groupDesc="Check that comments inside sources are present in a range from 20% up to 40%"
