--- a/qa/mafPath.py.conf
+++ b/qa/mafPath.py.conf
@@ -3,13 +3,13 @@ import os
 #cmake autofilled paths
 
 #mafSourcesDir represents the base dir for all the projects, each project needs to be located in a directory
-mafSourcesDir = os.path.join("@MAF_SOURCE_DIR@")
+mafSourcesDir = os.path.join("@PROJ_SOURCE_DIR@")
 #mafTestDir represents the base directory for all the tests, each test project needs to be located in a directory
-mafTestsDir = os.path.join("@MAF_SOURCE_DIR@","Testing")
+mafTestsDir = os.path.join("@PROJ_SOURCE_DIR@","Testing")
 #mafBinaryDir represents the directory in which find all the binaries
-mafBinaryDir = os.path.join("@MAF_BINARY_DIR@")
+mafBinaryDir = os.path.join("@PROJ_BINARY_DIR@")
 #mafQADir represents the directory of the qa inside the build directory
-mafQADir = os.path.join(mafBinaryDir,"qa")
+mafQADir = os.path.join("@CMAKE_BINARY_DIR@","qa")
 #represents the output directory of the doxygen of the C++ source files without tests, in xml
 mafDocOutput = os.path.join(mafQADir,"doc_output","DocOutput","xml")
 #represents the output directory of the doxygen of the C++ source files without tests, in xml
@@ -17,6 +17,4 @@ vtkMafDocOutput = os.path.join(mafQADir,"doc_output","DocOutputvtkMAF","xml")
 #represents the output directory of the doxygen of the C++ source files wit tests, in xml
 mafDocWithTestsOutput = os.path.join(mafQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
-mafPythonDocOutput = os.path.join("@MAF_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
-#mafSourceTemp represents the files .cxx .txx .cpp of only MAF framework without any libraries
-mafSourceTemp = os.path.join("@MAF_BINARY_DIR@","qa","doc_output","TmpSrc")
+mafPythonDocOutput = os.path.join("@PROJ_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
