renamed mmuUtility in mafUtility

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -67,7 +67,7 @@ mafVector.txx
 mafVersion.h
 mmuIdFactory.cpp
 mmuIdFactory.h
-mmuUtility.h
+mafUtility.h
 vtkMAFSmartPointer.h
 vtkMAFToLinearTransform.h
 mafZipUtility.cpp
