added doxygen for tests

--- a/qa/doc_output/CMakeLists.txt
+++ b/qa/doc_output/CMakeLists.txt
@@ -23,7 +23,7 @@ find_package(Doxygen)
 
 if (DOXYGEN_FOUND)
   configure_file(MEDDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MEDDoxyfile IMMEDIATE @ONLY)
-  # configure_file(MAF2DoxyfileWithTests.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2DoxyfileWithTests IMMEDIATE @ONLY)
+  configure_file(MEDDoxyfileWithTests.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MEDDoxyfileWithTests IMMEDIATE @ONLY)
   # configure_file(MAF2PythonDoxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/MAF2PythonDoxyfile IMMEDIATE @ONLY)
   # configure_file(vtkMAF2Doxyfile.in     ${CMAKE_BINARY_DIR}/qa/doc_output/vtkMAF2Doxyfile IMMEDIATE @ONLY)
 
@@ -32,20 +32,20 @@ execute_process(
   COMMAND ${CMAKE_COMMAND} -E remove_directory DocOutput
 )
 
-# execute_process(
-  # WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
-  # COMMAND ${CMAKE_COMMAND} -E remove_directory DocWithTestsOutput
-# )
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${CMAKE_COMMAND} -E remove_directory DocWithTestsOutput
+)
 
 execute_process(
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
   COMMAND ${DOXYGEN_EXECUTABLE} MEDDoxyfile
 )
 
-# execute_process(
-  # WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
-  # COMMAND ${DOXYGEN_EXECUTABLE} MAF2DoxyfileWithTests
-# )
+execute_process(
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
+  COMMAND ${DOXYGEN_EXECUTABLE} MEDDoxyfileWithTests
+)
 
 # execute_process(
   # WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/qa/doc_output
