--- a/qa/Rules/CoverageRulesFilePattern.ini
+++ b/qa/Rules/CoverageRulesFilePattern.ini
@@ -1,3 +1,3 @@
 parameter="\Aclass.*\.xml"
-sourceDir=mafPath.mafDocWithTestsOutput
+sourceDir=medPath.mafDocWithTestsOutput
 groupDesc="Check which are the tests present inside the framework"
