set vtkMed doc output folder

--- a/qa/medPath.py.conf
+++ b/qa/medPath.py.conf
@@ -3,20 +3,18 @@ import os
 #cmake autofilled paths
 
 #medSourcesDir represents the base dir for all the projects, each project needs to be located in a directory
-medSourcesDir = os.path.join("@MED_SOURCE_DIR@")
+medSourcesDir = os.path.join("@PROJ_SOURCE_DIR@")
 #medTestDir represents the base directory for all the tests, each test project needs to be located in a directory
-medTestsDir = os.path.join("@MED_SOURCE_DIR@","Testing")
+medTestsDir = os.path.join("@PROJ_SOURCE_DIR@","Testing")
 #medBinaryDir represents the directory in which find all the binaries
-medBinaryDir = os.path.join("@MED_BINARY_DIR@")
+medBinaryDir = os.path.join("@PROJ_BINARY_DIR@")
 #medQADir represents the directory of the qa inside the build directory
-medQADir = os.path.join(medBinaryDir,"qa")
+medQADir = os.path.join("@CMAKE_BINARY_DIR@","qa")
 #represents the output directory of the doxygen of the C++ source files without tests, in xml
 medDocOutput = os.path.join(medQADir,"doc_output","DocOutput","xml")
 #represents the output directory of the doxygen of the C++ source files without tests, in xml
-vtkmedDocOutput = os.path.join(medQADir,"doc_output","DocOutputvtkmed","xml")
+vtkMedDocOutput = os.path.join(medQADir,"doc_output","DocOutputvtkMed","xml")
 #represents the output directory of the doxygen of the C++ source files wit tests, in xml
 medDocWithTestsOutput = os.path.join(medQADir,"doc_output","DocWithTestsOutput","xml")
 #represents the output directory of the doxygen of the Python source files, in xml
 medPythonDocOutput = os.path.join("@MED_BINARY_DIR@","qa","doc_output","PythonDocOutput","xml")
-#medSourceTemp represents the files .cxx .txx .cpp of only med framework without any libraries
-medSourceTemp = os.path.join("@MED_BINARY_DIR@","qa","doc_output","TmpSrc")
