--- a/qa/Rules/vtkMedNamingConventionRulesFilePattern.ini
+++ b/qa/Rules/vtkMedNamingConventionRulesFilePattern.ini
@@ -1,3 +1,3 @@
 parameter="\Aclass.*\.xml"
-sourceDir=medPath.vtkMafDocOutput
+sourceDir=medPath.vtkMedDocOutput
 groupDesc="Check that variables or functions respect the naming convention"
